# pinn-crypto

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
execution/: README.md  fetch_data.py  phase2_parametric.py
execution/output/backtest/: summary.csv
execution/output/multi_backtest/: aggregate_summary.csv
experiments/: backtest_execution.py  backtest_multi.py  phase1_validate.py
experiments/output/multi_backtest/: per_day_summary.csv
market_making/: README.md  backtest.py  scan_markets.py  train_parametric.py  validate_fd.py  validate_pinn.py
market_making/output/backtest/: mm_backtest_results.csv
market_making/output/parametric/: results.txt
src/pinn/: backtest.py  data.py  fd_dataset.py  market_making.py  mm_backtest.py  mm_pinn.py  network.py  parametric_mm_pinn.py  physics.py  polymarket.py  strategies.py  training.py  visualization.py
tests/: test_market_making.py  test_network.py  test_physics.py  test_strategies.py
